CloudFormation-High-Availability-App/demo/demoservers.yaml
Parameters:

  EnvironmentName:
    Description: An env name that will be prefixed in resourse
    Type: String

Resources:
  LBSecGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http to our load balancer
      VpcId:
        Fn::ImportValue:
          !Sub "${EnvironmentName}-VPCID"
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
  WebServerSecGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http to our load balancer
      VpcId:
        Fn::ImportValue:
          !Sub "${EnvironmentName}-VPCID"
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 8080
        ToPort: 8080
        CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
      - IpProtocol: tcp
        FromPort: 0
        ToPort: 65535
        CidrIp: 0.0.0.0/0
  WebAppLaunchCofig:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
        UserData:
            Fn::Base64: !Sub |
            #!/bin/bash
            #install docker
            apt-get update
            apt-get install -y apt-transport-https ca-certificates curl s
            curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo 
            add-apt-repository \    
            "deb [arch=amd64"] https://download.docker.com/linux/ubuntu/gpg
            $(lsb_release -cs) \
            stable"
            apt-get update
            apt-get install -y docker-ce
            usermod -aG docker ubuntu
            docker run -p 8080:8080     tomcat:8.0
        ImageId: ami-005bdb005fb00e791
        KeyName: that-one
        SecurityGroups:
        - Ref: WebServerSecGroup
        InstanceType: t3.medium    
        BlockDeviceMappings:
        -DeviceName: "/dev/sdk"
         Ebs:
            VolumeSize: '10'
    WebAppGroup:
